fix the gap when draw :after in top banner

--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -1,9 +1,7 @@
-html,body {
-  margin: 0;
-}
-
+html,
 body {
-  background: url('~images/gray-bg.jpg') repeat-x fixed;
+  margin: 0;
+  overflow-x: hidden;
 }
 
 a {
@@ -18,4 +16,3 @@ ul {
 p {
   margin: 0;
 }
-
